--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
       background: black;
       overflow: hidden;
     }
-    canvas { display: block; }
+    canvas {
+      display: block;
+    }
   </style>
 </head>
 <body>
 
-<canvas id="game"></canvas>
+<canvas id="c"></canvas>
 
-<script src="js/core.js"></script>
-<script src="js/camera.js"></script>
-<script src="js/renderer.js"></script>
-<script src="js/stars.js"></script>
 <script src="js/galaxy.js"></script>
-
 </body>
 </html>
